force-app/main/default/objects/smartystreets__VerificationLog__c/smartystreets__VerificationLog__c.object-meta.xml
<CustomObject>
    <description>Verification Log of Calls and Responses</description>
    <label>√ Verification Log</label>
    <nameField>
        <displayFormat>VL{000000000}</displayFormat>
        <label>VL#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>√ Verification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>