force-app/main/default/objects/smartystreets__VerificationLog__c/fields/smartystreets__ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ErrorLog__c</fullName>
    <label>Error Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>