force-app/main/default/objects/smartystreets__VerificationLog__c/fields/smartystreets__Reply__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Reply__c</fullName>
    <label>Reply</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>