force-app/main/default/objects/smartystreets__VerificationLog__c/fields/smartystreets__Request__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Request__c</fullName>
    <label>Request</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>