force-app/main/default/objects/smartystreets__VerificationLog__c/fields/smartystreets__SalesforceRecord__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__SalesforceRecord__c</fullName>
    <label>Salesforce Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>