force-app/main/default/objects/smartystreets__VerificationLog__c/fields/smartystreets__Status__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Status__c</fullName>
    <label>Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>