force-app/main/default/objects/smartystreets__VerificationLog__c/fields/smartystreets__VerificationUsed__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__VerificationUsed__c</fullName>
    <label>Verification Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SmartyStreets</fullName>
            </value>
            <value>
                <fullName>Google Maps</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>